--- a/client/package.json
+++ b/client/package.json
@@ -44,7 +44,7 @@
       "last 1 safari version"
     ]
   },
-  "author": "",
+  "author": "Allan V. Pimble, Sr.",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.6"
